--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "atom": ">=1.0.0 <2.0.0"
   },
   "dependencies": {
-    "luaparse": "*"
+    "luaparse": "*",
+    "jquery": "*"
   },
   "providedServices": {
     "linter": {
